syntax = "proto3";
package registry.node.v1;

// A connection endpoint.
message ConnectionEndpoint {
  // The IP address. Senders SHOULD use dotted-quad notation for IPv4 addresses
  // and RFC5952 representation for IPv6 addresses (which means that IPv6
  // addresses are *not* enclosed in `[` and `]`, as they are not written
  // with the port in the same field).
  //
  // Clients MUST be prepared to accept IPv6 addresses in the forms shown in
  // RFC4291.
  string ip_addr = 1;
  uint32 port = 2;

  reserved 4;
}

message FlowEndpoint {
  reserved 1;
  reserved "flow_tag";

  // The IP/port for this flow.
  ConnectionEndpoint endpoint = 2;
}

// A node: one machine running a replica instance.
message NodeRecord {
  // the node_id is redundant as it is already contained in the key for this
  // value.
  reserved 1, 2, 3, 4;
  reserved "node_id";
  reserved "gossip_advert";
  reserved "gossip_request";
  reserved "gossip_artifact";

  // The endpoint where this node receives xnet messages.
  ConnectionEndpoint xnet = 5;

  // The endpoint where this node receives http requests.
  ConnectionEndpoint http = 6;

  reserved 7;
  reserved "transport_tls_certificate";

  // The P2P flow end points.
  repeated FlowEndpoint p2p_flow_endpoints = 8;

  reserved 9, 10, 11, 12, 13, 14;
  reserved "dcop_principal_id";
  reserved "prometheus_metrics_http";
  reserved "public_api";
  reserved "private_api";
  reserved "prometheus_metrics";
  reserved "xnet_api";

  // The id of the node operator that added this node.
  bytes node_operator_id = 15;

  // The SEV-SNP chip_identifier for this node.
  bytes chip_id = 16;

  // ID of the HostOS version to run.
  optional string hostos_version_id = 17;
}
